# begleit-app-training

./: .gitignore  Dockerfile  LICENSE  README.md  docker-build.sh  docker-run.sh  dvc.yaml  eval.sh  failures-and-fixes.md  next-steps.md  pyproject.toml  quantize.sh  rename_s3_cache.py  run.sh  spike.sh  train.sh
.agent/rules/: changing-files.md  global.md  iterate.md
.agent/skills/axolotl/: SKILL.md
.agent/workflows/: configure-github-repo.md  initial-setup.md  mcp_server_template.json  onboarding.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.dvc/: config
.github/: dependabot.yml
.github/workflows/: build.yml  detect-changes.yml  pull-request.yml
config/: base.yml  train-gemma4.yml  train-mistral4small.yml  train.yml  zero3.json
data/: prompt-template.md  sample_dataset.jsonl  system-prompt.md
data/raw/: .gitignore  0002_Leichte_Sprache.txt.dvc  0002_Standardsprache.txt.dvc  0007_Leichte_Sprache.txt.dvc  0007_Standardsprache.txt.dvc  0021_Leichte_Sprache.txt.dvc  0021_Standardsprache.txt.dvc  0022_Leichte_Sprache.txt.dvc  0022_Standardsprache.txt.dvc  0054_Leichte_Sprache.txt.dvc  0054_Standardsprache.txt.dvc  0196_Leichte_Sprache.txt.dvc  0196_Standardsprache.txt.dvc  0197_Leichte_Sprache.txt.dvc  0197_Standardsprache.txt.dvc  0202_Leichte_Sprache.txt.dvc  0202_Standardsprache.txt.dvc  1_Leichte_Sprache.md.dvc  1_Standardsprache.md.dvc  2_Leichte_Sprache.md.dvc  2_Standardsprache.md.dvc
docs/: data.md  implementation-details.md  pipeline.md  training.md
prd/: PRD-001.md
runner/: entrypoint.sh
scripts/: eval.sh  launch.sh  reconstruct_s3_hf_cache.py  train.sh
src/: build_and_cache_models.py  evaluation.py  launcher.py  prepare_data.py  prepare_dataset.py  quantize.py  spike.py  train.py  train_patched.py
src-eval/: evaluation.py  pyproject.toml
src-train/: check_gpu.py  prepare_dataset.py  pyproject.toml  train.py
tests/: container_smoke_test.py  eval_container_smoke_test.py  test_ci_sync.py  test_data.py  test_dockerfile.py  test_imports.py  test_launcher.py  test_prepare_dataset.py  test_preprocess_adapter.py  test_train.py
