[project]
name = "axolotl-moe-pipeline"
version = "0.1.0"
description = "Axolotl MoE fine-tuning pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "clearml>=2.1.7",
    "datasets>=2.16.0",
    "omegaconf>=2.3.0",
    "pytest>=8.0.0",
    "transformers<5.11",
    "dvc[s3]>=3.50.0",
    "numpy<2.2",
    "setuptools<80",
    "torch==2.3.1; sys_platform == 'linux'",
    "vllm>=0.5.2,<0.6.0; sys_platform == 'linux'",
    "protobuf>=3.20.3,<4.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
