[project]
name = "axolotl-moe-pipeline"
version = "0.1.0"
description = "Axolotl MoE fine-tuning pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "clearml>=2.1.7",
    "pytest>=8.0.0",
    "dvc[s3]>=3.50.0",
    "textstat>=0.7.13",
    "awscli",
    "gptqmodel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
