[project]
name = "axolotl-moe-evaluation"
version = "0.1.0"
description = "Sglang Evaluation Pipeline"
readme = "../README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pytest>=8.0.0",
    "textstat>=0.7.13",
    "awscli",
    "boto3",
    "transformers",
    "sglang",
    "mistral_common>=1.11.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
